Closed
Bug 727966
Opened 14 years ago
Closed 13 years ago
MAPLE triggers 4 paints on a rotation
Categories
(Firefox for Android Graveyard :: General, defect, P2)
Tracking
(firefox13 affected, firefox14 fixed, blocking-fennec1.0 beta+)
RESOLVED
FIXED
Firefox 14
People
(Reporter: kats, Assigned: kats)
References
Details
(Whiteboard: [viewport])
Attachments
(1 file)
1.16 KB,
patch
|
blassey
:
review+
|
Details | Diff | Splinter Review |
1. Load about:firefox and wait for it to settle
2. Run:
adb logcat -c; adb logcat -v time | grep "Basic layers drawing"
3. Rotate phone
Assignee | ||
Comment 1•14 years ago
|
||
Oh, expected results: only one instance of "Basic layers drawing" should be printed; actual results: 4 are printed.
Updated•13 years ago
|
Keywords: fennecnative-betablocker
Updated•13 years ago
|
Priority: -- → P2
Updated•13 years ago
|
blocking-fennec1.0: --- → beta+
Comment 2•13 years ago
|
||
This needs to be retested after my viewport fixes. Specifically I pause painting for some time during rotation, so that might have improved the situation.
Updated•13 years ago
|
Assignee: nobody → bugmail.mozilla
Updated•13 years ago
|
Whiteboard: [gfx]
Assignee | ||
Comment 3•13 years ago
|
||
Just an update: we're still doing 2 draws during rotation. The first one is sometimes glitchy, and should be eliminated, but I want to fix bug 729653 first as it will remove some of the complicatedness of the code.
Assignee | ||
Comment 4•13 years ago
|
||
The NS_SIZE event that gets sent to gecko in the nsWindow::OnSizeChanged function seems sufficient to let layout know that things have changed and need redrawing.
I've pushed this change to try at https://tbpl.mozilla.org/?tree=Try&rev=9545d9d6f157 to make sure it doesn't break XUL since this is shared code.
Attachment #606824 -
Flags: review?(blassey.bugs)
Updated•13 years ago
|
Attachment #606824 -
Flags: review?(blassey.bugs) → review+
Assignee | ||
Comment 6•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6ea259121f1e
On simple pages we now do only one draw on rotation, and it should be glitch-free.
Comment 7•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•