Bug 727966 - Remove an unnecessary paint on rotation. r=blassey